--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,21 @@
 h1 {
   color: orange;
+  background-color: slategray;
+  font-size: 20px;
+  text-decoration: underline;
+  font-family: arial;
+  text-align: center;
 }
 p {
   color: slategrey;
+  text-align: right;
+  line-height: 30px;
+  letter-spacing: 3px;
+  column-count: 2;
+  column-gap: 60px;
+}
+ul{
+  border-width: 4px;
+  border-style: solid;
+  border-color: crimson;
 }
