--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,14 @@ p {
   column-gap: 60px;
 }
 ul{
-  border-width: 4px;
+  /* border-width: 4px;
   border-style: solid;
-  border-color: crimson;
+  border-color: crimson; */
+  /* border: 4px solid crimson; */
+  border-bottom: 4px dotted crimson;
+  border-left: 8px dashed crimson;
+}
+li{
+  list-style-type: none;
+  text-shadow: 2px 2px lightgray;
 }
