so far for colors we've been using vscode keywords for colors, however we can use specific hex code for colors - start with a # and then followed by 6 digits(they could be numbers from 0-9 or letters from a-f) and together these combinations of letters and numbers result in a particular color. o's reprsent the darkest shade and f the brightest or most vivid shade. #000000 (black) #ffffff(white)

--- a/styles.css
+++ b/styles.css
@@ -24,5 +24,6 @@ ul{
 }
 li{
   list-style-type: none;
-  text-shadow: 2px 2px lightgray;
+  /* text-shadow: 2px 2px lightgray; */
+  text-shadow:2px 2px #E9E9E9;
 }
