--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
 span{
-  display:block;
+  display: inline-block;
+  margin: 20px;
+  padding: 20px;
 }
 div{
-  display:inline;
+  /* display:inline; */
+  border: 2px solid crimson;
+  margin: 20px;
+  padding: 20px;
 }
