--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,3 @@
-span{
-  display: inline-block;
-  margin: 20px;
-  padding: 20px;
-}
-div{
-  /* display:inline; */
-  border: 2px solid crimson;
-  margin: 20px;
-  padding: 20px;
+p{
+  color: red;
 }
