CSS Classes & Selectors - id's: can be used as hooks just like classes but are more commonly used in js. they're are more specific. one constraint that id's have is that you can only use one id of a certain name on each page. all id names must be unique. so i could use the id="content" again on the page if i've already used it once.another way to be more specific with what elements we want to style is by using descendance selctors = means we can target children inside a parent element. parent goes on the left and the child on the right, could do this several layers deep. attribute selectors - a[href], a[href*="thenetninja]...are a good way to target elements with specific attributes that also have specifc value

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-p.error{
+/* p.error{
   color: red;
 }
 p.success{
@@ -7,4 +7,29 @@ p.success{
 
 p.success.feedback{
   border: 1px dashed #25c525;
+}
+
+#content{
+  background-color: #ebebeb;
+  padding: 20px;
+} */
+
+/* div .error{
+  color:red;
+} */
+
+/* any anchor tag with a href that includes "thenetninja" */
+a[href*="thenetninja"]{
+  background-color:rgb(67, 192, 67);
+  color:white;
+  text-decoration: none;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+/* any anchor tag with a href that ends in ".com" style this way */
+a[href$=".com"]{
+  color:white;
+  background-color:red;
+  border: 2px solid blue;
 }
