cascade - inheritance/specifity - html elements can inherit css properties that are applied to their parents that then can passes down to the children. normally only font styles, colors, fonts that are inherited not things like margin, padding, background style, borders... if as a child from a parent we want to inherit something from the parent that isn't automatically inherited how would we do that? easy - in the css child selector add the parent properties and next to them add 'inherit' and they will inherit the properties from the parent. we can also overite the color from the parent and choose a different color and this will work b/c of specificity. if further down i decide to style the p tag another color, say orange, then that will take precendence b/c it is further down.

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ p.success.feedback{
 } */
 
 /* any anchor tag with a href that includes "thenetninja" */
-a[href*="thenetninja"]{
+/* a[href*="thenetninja"]{
   background-color:rgb(67, 192, 67);
   color:white;
   text-decoration: none;
@@ -28,8 +28,25 @@ a[href*="thenetninja"]{
 }
 
 /* any anchor tag with a href that ends in ".com" style this way */
-a[href$=".com"]{
+/* a[href$=".com"]{
   color:white;
   background-color:red;
   border: 2px solid blue;
+} */
+
+div{
+  color: lightcoral;
+  border: 1px solid grey;
+  margin: 40px;
+  font-weight: bold
+}
+
+p{
+  border:inherit;
+  margin:inherit;
+  color:crimson;
+}
+
+p{
+  color:orange;
 }
