--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+body, ul, li, body, h1, h2, a{
+  margin: 0;
+  padding: 0;
+  font-family: arial;
+}
 header{
 background-color: #F63232;
 padding: 20px;
@@ -40,4 +45,61 @@ header h1{
 .banner h2 span{
   /* takes the font-size it inherits from the parent -> 74px * 1.3 */
   font-size: 1.3em;
+}
+nav{
+  background-color: #F4F4F4;
+  padding: 20px;
+  position: sticky;
+  /* as soon as it gets 105px from the top the nav becomes sticky and now as we scroll down we can still see that navigation at the top. */
+  top: 105px;
+}
+nav ul{
+  white-space: nowrap;
+  max-width: 1200px;
+  /* Top/Bottom Left/Right - Auto L&R means if theres any space left over i'm going to automatically apply it to both sides. it centralizes it in the middle. */
+  margin: 0 auto;
+}
+nav li{
+  width: 25%;
+  display: inline-block;
+  font-size: 24px;
+}
+nav li a{
+  text-decoration: none;
+  color: #4B4B4B;
+}
+nav li a.join{
+  color: #f63232;
+}
+main{
+  /* both of the 2 below work in tandem - if a screen size is below 1200px then show 100% of screen size if its above 1200px then only show a max-width of 1200px; */
+  max-width: 100%;
+  width: 1200px;
+  margin: 80px auto;
+  padding: 0 40px;
+  /* incorporates padding into the total width so max width can by 100% inclusive of the padding. */
+  box-sizing: border-box;
+}
+article h2{
+  color: #F63232;
+  font-size: 48px;
+}
+article p{
+  /* vertical space between lines. 2em takes the font-size of the paragraph tag which by default is 16px in the browser and it multiplies it by 2. */
+  line-height: 2em;
+  color: #4b4b4b;
+}
+.images{
+  text-align: center;
+  margin: 80px 0;
+  white-space: nowrap;
+}
+.images li{
+  display: inline-block;
+  width: 40%;
+  margin: 20px 5%;
+}
+.images li img{
+  /* max-width off its parent container. so 40% */
+  max-width: 100%
 }
