--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,25 @@ article p{
   /* max-width off its parent container. so 40% */
   max-width: 100%
 }
+section.join{
+  background: #F4F4F4;
+  text-align: center;
+  padding: 60px 20px;
+  color:#4B4B4B;
+}
+.join h2{
+  font-size: 36px;
+}
+form input{
+  margin: 20px 20px;
+  padding: 10px 20px;
+  font-size: 24px;
+  border-radius: 28px;
+  border: 4px solid white;
+}
+footer{
+  background: #F63232;
+  color: white;
+  padding:10px;
+  text-align: center;
+}
