--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,21 @@ footer{
   padding:10px;
   text-align: center;
 }
+
+/* pseudo classes */
+nav li a:hover{
+  text-decoration: underline;
+}
+.images li:hover{
+  position: relative;
+  top: -4px;
+}
+/* form input border is dashed when the form input field is clicked or active */
+form input:focus{
+  border: 4px dashed #4b4b4b;
+  outline: none;
+}
+/* form input field display green when a valid email is entered */
+form input:valid{
+  border: 4px solid #71d300;
+}
