--- a/styles.css
+++ b/styles.css
@@ -143,3 +143,17 @@ form input:focus{
 form input:valid{
   border: 4px solid #71d300;
 }
+article p::first-line{
+  font-weight: bold;
+  font-size: 1.2em;
+}
+section.join p::first-letter{
+  font-size: 1.5em;
+}
+p::selection{
+  background-color:#F63232;
+  color: white;
+}
+p::after{
+  content: '...'
+}
