--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,55 @@ p::selection{
 p::after{
   content: '...'
 }
+
+/* responsive styles - overriding properties only*/
+@media screen and (max-width: 1400px){
+  .banner .welcome h2{
+   font-size: 60px;
+  }
+  nav li{
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 960px){
+  .banner .welcome h2{
+   font-size: 40px;
+  }
+}
+@media screen and (max-width: 700px){
+
+  .banner .welcome{
+   position: relative;
+   text-align: center;
+   padding: 10px;
+  }
+  .banner .welcome br{
+    display: none;
+  }
+  .banner .welcome h2{
+    font-size: 25px;
+   }
+   .banner .welcome span{
+     font-size: 1em;  /* 1 * 25px parent, or h2 in this case. */
+   }
+   .images li{
+     width: 100%;
+     margin: 20px auto;
+     display: block;
+   }
+}
+@media screen and (max-width: 560px){
+
+  nav li{
+    font-size: 20px;
+    display: block;
+    width: 100%;
+    margin: 12px 0;
+  }
+  header{
+    position: relative;
+  }
+  nav{
+    top: 0;
+  }
+}
